# 2023_1_RelayTeam

./: .clang-format  .clang-uml  .gitignore  CMakeLists.txt  CMakeLists.txt.user.22e06b4  README.md  Session.h  generate_uml.sh  receive_new.cpp  send_new.cpp  session_manager.cpp  session_manager.h
application/: CMakeLists.txt
application/android/: AndroidManifest.xml
application/android/res/drawable/: splashscreen.xml
application/include/: BluetoothSelectorWidget.h  DBManager.h  DeviceWidget.h  MainWindow.h  Options.h  SettingsWidget.h
application/sources/: BluetoothSelectorWidget.cpp  DBManager.cpp  DeviceWidget.cpp  MainWindow.cpp  SettingsWidget.cpp  main.cpp
bluetooth/: CMakeLists.txt
bluetooth/include/: BluetoothClient.h  BluetoothManager.h  BluetoothScanner.h  BluetoothServer.h  bluetoothformatimage.cpp  bluetoothformatimage.h  client.h  example_bluetooth.h  main.cpp  manager.cpp  manager.h  remoteselector.cpp  remoteselector.h  server.cpp  server.h
bluetooth/sources/: BluetoothClient.cpp  BluetoothManager.cpp  BluetoothScanner.cpp  BluetoothServer.cpp  bluetoothformatimage.h  client.cpp  client.h  example_bluetooth.cpp  manager.cpp  manager.h  remoteselector.cpp  remoteselector.h  server.cpp  server.h
docs/: Doxyfile.in
general_use/: CMakeLists.txt
general_use/include/: UITools.h  keygen.h  networkTools.h  variables.h  variables.h.in
general_use/sources/: keygen.cpp  networkTools.cpp
general_use/tests/: tests.cpp
gstreamer/: CMakeLists.txt
gstreamer_interface/: CMakeLists.txt
gstreamer_interface/include/: PortScaner.h  Receiver.h  Reciver.h  ReciverAudio.h  ReciverVideo.h  Session.h  SessionManager.h  Transmiter.h  TransmiterAudio.h  TransmiterVideo.h  Transmitter.h  reciver.h  transmmiter.h
gstreamer_interface/sources/: PortScaner.cpp  Reciver.cpp  ReciverAudio.cpp  ReciverVideo.cpp  Session.cpp  SessionManager.cpp  Transmiter.cpp  TransmiterAudio.cpp  TransmiterVideo.cpp  example_gstreame.cpp  reciver.cpp  tranmiter.cpp
gstreamer_interface/tests/: tests.cpp
include/: mainwindow.h
mr_server/: CMakeLists.txt
mr_server/include/: MRServer.h
mr_server/sources/: MRServer.cpp
qmdnsengine_extern/: CMakeLists.txt
qmdnsengine_extern/src/: hostname.cpp  server.cpp
qt_application/: CMakeLists.txt
qt_application/include/: DBManager.h  Device.h  MainWindow.h  mainwindow.h  variables.h.in
qt_application/sources/: DBManager.cpp  DeviceWidget.cpp  MainWindow.cpp  main.cpp  mainwindow.cpp
qt_bluetooth/: CMakeLists.txt
qt_bluetooth/sources/: example_bluetooth.cpp
qt_general_use/: CMakeLists.txt
qt_gstreamer/: CMakeLists.txt
qt_gstreamer/include/: example_gstreamer.h
qt_gstreamer/sources/: example_gstreame.cpp
qt_search_devices/: CMakeLists.txt
qt_search_devices/include/: SearchWidget.h  ServiceWidget.h
qt_search_devices/sources/: Publisher.cpp  ServiceWidget.cpp
search_devices/: CMakeLists.txt
search_devices/include/: Publisher.h  SearchWidget.h  ServiceItem.h  ServiceWidget.h
search_devices/sources/: Publisher.cpp  SearchWidget.cpp  ServiceItem.cpp  ServiceWidget.cpp
sources/: Device.cpp  main.cpp
ssh_server/: CMakeLists.txt
ssh_server/include/: SSHServer.h
ssh_server/sources/: SSHServer.cpp
ssl_server/: CMakeLists.txt
ssl_server/include/: SSLServer.h  SslConnection.h  SslIOManager.h  generateCertificates.h
ssl_server/sources/: SSLServer.cpp  SslConnection.cpp  SslIOManager.cpp  generateCertificates.cpp
